--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,17 @@
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
 h1 {
     text-align: center;
+    margin-bottom: 10%;
 }
 
 .row {
     display: block;
     width: 50%;
-    height: 50%;
+    height: 15%;
     margin: 0 auto;    
 }
 
