--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,24 @@ h1 {
 .slot {
     display: inline-block;
     box-sizing: border-box;
-    width: 32.7%;
+    width: 32%;
     height: 99%;
     background-color: white;
+    border-radius: 10px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 }
+
+img {
+    width: 80%;
+    margin: auto;
+}
+
+.slot:hover {
+    opacity: 80%;
+}
+
 
 /*GRID LINES ############################## */
 #row-one {border-bottom: 5px solid black;}
