--- a/css/style.css
+++ b/css/style.css
@@ -34,18 +34,22 @@ h1 {
 
 .game-over {
     display: none;
+    flex-direction: column;
+    justify-content: center;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
-    opacity: 50%;
+    background: rgba(255, 255, 255, 0.5);
+    vertical-align: middle;
 }
 
 h2 {
     text-align: center;
-    top: 50%;
+    font-size: 5em;
+    line-height: 100%;
+    vertical-align: middle;
 }
 
 
