--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,14 @@ h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.5);
+    background: #ffffff9c;
     vertical-align: middle;
 }
 
 h2 {
+    font-family: 'Orbitron', sans-serif;
+    color: rgb(215, 224, 223);
+    text-shadow: 2px 2px #3b5464d5;
     text-align: center;
     font-size: 5em;
     line-height: 100%;
