--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,31 @@ h2 {
     vertical-align: middle;
 }
 
+#winbox1 {
+    position: fixed;
+    left: 10px;
+    text-align: left;
+    font-family: 'Orbitron', sans-serif;
+}
+
+#winbox2 {
+    position: fixed;
+    right: 10px;
+    text-align: right;
+    font-family: 'Orbitron', sans-serif;
+}
+
+#winbox3 {
+    position: fixed;
+    left: 48%;
+    text-align: center;
+    font-family: 'Orbitron', sans-serif;
+}
+
+.scores {
+    font-size: 2em;
+}
+
 
 /*GRID LINES ############################## */
 #row-one {border-bottom: 5px solid black;}
