--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ h1 {
     text-align: center;
     margin-bottom: 10%;
     font-family: 'Dancing Script', cursive;
-    font-size: 5em;
+    font-size: 75px;
 }
 
 .row {
@@ -82,6 +82,62 @@ h2 {
     font-size: 2em;
 }
 
+.chooser{
+    display: flex;
+    height: 30%;
+    background-color: white;
+    position: fixed;
+    left: 0;
+    bottom: -30%;
+    width: 100%;
+    border-top: 15px solid red;
+    border-radius: 50px;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.char-select {
+    flex-basis: 15%;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.name-select div {
+    display: block;
+    top: 50%
+}
+
+.name-select {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    flex-basis: 30%;
+    text-align: center;
+    vertical-align: middle;
+    font-family: 'Orbitron', sans-serif;
+}
+
+#bunny{
+    background-image: url(../img/bunny.gif);
+}
+#monkey{
+    background-image: url(../img/monkey.gif);
+}
+#kitten{
+    background-image: url(../img/kitten.gif);
+}
+#chicken{
+    background-image: url(../img/chicken.gif);
+}
+.slide-up{
+    bottom: 0px !important;
+}
+
+.slide-down{
+    bottom: -475px !important;
+}
 
 /*GRID LINES ############################## */
 #row-one {border-bottom: 5px solid black;}
